--- a/about_me.html
+++ b/about_me.html
@@ -25,7 +25,7 @@
                         <ul class="menu">
                             <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
                             <li class="active"><a href="/about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
-                            <li><a href="/resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
+                            <li><a href="resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
                             <li ><a href="/portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
                             <li><a href="/contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                             </ul>
