--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                                         <ul class="menu">
                                             <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
                                             <li class="active"><a href="/about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
-                                            <li><a href="/resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
-                                            <li><a href="/portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-                                            <li><a href="/contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                                            <li><a href="resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
+                                            <li><a href="portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
+                                            <li><a href="contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                                             </ul>
                                     
                                         <div class="nav_footer">
@@ -65,10 +65,10 @@
                              
                                                  <ul class="menu">
                                                     <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-                                                    <li class="active"><a href="/about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
-                                                    <li><a href="/resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
-                                                    <li><a href="/portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-                                                    <li><a href="/contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                                                    <li class="active"><a href="about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
+                                                    <li><a href="resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
+                                                    <li><a href="portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
+                                                    <li><a href="contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                                                  </ul>
                                                </div>
                                                <div class="wrapper_about_me">
