--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,10 @@
                         
                         <ul class="menu">
                           <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-                            <li><a href="/about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
-                            <li><a href="/resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
-                            <li class="active"><a href="/portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-                            <li><a href="/contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                            <li><a href="about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
+                            <li><a href="resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
+                            <li class="active"><a href="portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
+                            <li><a href="contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                         </ul>
                         <div class="nav_footer">
                             <ul class="social">
@@ -54,10 +54,10 @@
 
                     <ul class="menu">
                       <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-                      <li><a href="/about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
-                      <li><a href="/resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
-                      <li class="active"><a href="/portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-                      <li><a href="/contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                      <li><a href="about_me.html"><i class="fa fa-user-o"></i> About me</a></li>
+                      <li><a href="resume.html"><i class="fa fa-file-text-o"></i> Resume</a></li>
+                      <li class="active"><a href="portfolio.html"><i class="fa fa-briefcase"></i> Portfolio</a></li>
+                      <li><a href="contact.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                     </ul>
                   </div>
         
