--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                             </li> 
 
                         <li class="contact_body"> 
-                                <h2>Freelance</h2>
+                                <h2>Freelance:</h2>
                                 <p>available</p>  
                         </li> 
 
