--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
     
    </div>
   </div>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+              <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
                             <script src="common.js"></script> 
 
 
