--- a/resume.html
+++ b/resume.html
@@ -142,7 +142,7 @@
                                 </div>
 
                                 
-                                <h3 class="progress-title">React Native</h3>
+                                <h3 class="progress-title">Firebase</h3>
                                
                                     <div class="progress-bar" >
                                         <div class="progress-value" style="width: 75%;"></div>
