--- a/about_me.html
+++ b/about_me.html
@@ -33,9 +33,9 @@
                     
                         <div class="nav_footer">
                             <ul class="social">
-                                <li><a href=""><i class="fa fa-github"></i></a></li>
-                                <li> <a href=""><i class="fa fa-linkedin"></i></a> </li> 
-                                <li> <a href=""><i class="fa fa-instagram"></i></a> </li> 
+                              <li><a href="https://github.com/xenia19"><i class="fa fa-github"></i></a></li>
+                                <li> <a href="https://www.linkedin.com/in/ksenia-galaktionova-a60b30b0/"><i class="fa fa-linkedin"></i></a> </li> 
+                                <li> <a href="https://www.instagram.com/xeniafeliz/"><i class="fa fa-instagram"></i></a> </li> 
                             </ul>
                         </div>
                 
