--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                                                                   <span class="info">React JS</span></div></a></div>
                                  
                                     <div class="element-item react tiles">
-                                                            <a class="tile"> <img src="images/xeniatravel.png" alt="">
+                                                            <a class="tile"> <img src="images/travel.png" alt="">
                                                                 <div class="details"><span class="title"></span>
                                                                   <span class="info">React JS</span></div></a></div>
 
