--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
                                  
                                     <div class="element-item react tiles">
                                                             <a class="tile"> <img src="images/travel.png" alt="">
-                                                                <div class="details"><span class="title">Travel blog</span>
+                                                                <div class="details"><span class="title">Travel blog</span><br>
                                                                   <span class="info">React JS</span></div></a></div>
 
 
