--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,12 @@ function radioButtonGroup( buttonGroup ) {
     buttonGroup.querySelector('.is-checked').classList.remove('is-checked');
     event.target.classList.add('is-checked');
   });
+  
 }
+    
+  $grid.imagesLoaded().progress( function() {
+  $grid.isotope('layout');
+});
 
 </script>
 
