--- a/portfolio.html
+++ b/portfolio.html
@@ -164,9 +164,10 @@ function radioButtonGroup( buttonGroup ) {
   
 }
     
-  $grid.imagesLoaded().progress( function() {
-  $grid.isotope('layout');
-});
+iso.imagesLoaded().progress( function() {
+iso.isotope('layout');
+});  
+
 
 </script>
 
