--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                                                                   <span class="info">React JS</span></div></a></div>
                                  
                                     <div class="element-item react tiles">
-                                                            <a class="tile"> <img src="images/travel.png" alt="">
+                                                            <a class="tile"  href="https://xenia19.github.io/xeniatravel/"> <img src="images/travel.png" alt="">
                                                                 <div class="details"><span class="title">Travel blog</span><br>
                                                                   <span class="info">React JS, Contentful API </span></div></a></div>
 
