--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                                 <div class="main_phrase">
                                     <h1>Xenia Galaktionova:</h1>
                                    <div><span>I am </span><span id="iam"></span></div>
-                                   <button> <a href="#about_me">Tell me more</a></button>
+                                   <button> <a href=".about_me_page">Tell me more</a></button>
                                 </div>
                         </div>
 
