--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                                 <div class="main_phrase">
                                     <h1>Xenia Galaktionova:</h1>
                                    <div><span>I am </span><span id="iam"></span></div>
-                                   <button> <a href=".about_me_page">Tell me more</a></button>
+                                   <button> <a href="#about_me_page">Tell me more</a></button>
                                 </div>
                         </div>
 
@@ -29,7 +29,7 @@
                 <section id="about_me">
                    
 
-                        <div class="about_me_page">
+                        <div id="about_me_page">
                                 <nav class="nav">
                                         <div class="nav_logo"> 
                                            <img src="images/xenia_logo.jpg" />
