--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <section id="about_me">
                    
 
-                        <div id="about_me_page">
+                        <div class="about_me_page">
                                 <nav class="nav">
                                         <div class="nav_logo"> 
                                            <img src="images/xenia_logo.jpg" />
