--- a/about_me.html
+++ b/about_me.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,7 +22,7 @@
                         <div class="nav_logo"> 
                            <img src="images/xenia_logo.jpg" />
                            <h2>Xenia Galaktionova</h2>
-                           <h3>Web developer</h3>
+                           <h3>JS developer</h3>
                         </div>
                         
                         <ul class="menu">
@@ -35,7 +37,7 @@
                             <ul class="social">
                               <li><a href="https://github.com/xenia19"><i class="fa fa-github"></i></a></li>
                                 <li> <a href="https://www.linkedin.com/in/ksenia-galaktionova-a60b30b0/"><i class="fa fa-linkedin"></i></a> </li> 
-                                <li> <a href="https://www.instagram.com/xeniafeliz/"><i class="fa fa-instagram"></i></a> </li> 
+                                <li> <a href="https://play.google.com/store/apps/developer?id=LaSiberia"><i class='fab fa-google-play'></i></a> </li> 
                             </ul>
                         </div>
                 
@@ -59,10 +61,11 @@
                           </div>
                           <div class="wrapper_about_me">
                           <div class="text_about_me">
-							  <p>Hi! My name is Xenia and I am a happy girl from Siberia. I have been creating websites for many years. 
-                                  Then my hobby became a profession. I really love what I'm doing.
-                                  <br>Since 2020 I'm a Computer Science student at University of Salerno in Italy.
-                                   </p>
+                            <p>Hi! My name is Xenia and I am a happy girl from Siberia, living in Sicily. 
+                                I have been creating websites for many years. 
+                            Then my hobby became a profession. I really love what I'm doing. I have experience with JS, React, React Native. I've developed 4 apps that you can find in my  <a class="tile" href="https://xenia19.github.io/portfolio/portfolio.html">portfolio</a>
+                                     and 1 telegram bot.
+                             </p>
 						  </div>
 						  <div class="fun_facts">
                           <div class="contact_title"><h2>Random facts about me</h2></div>  
