--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
    
@@ -19,7 +20,7 @@
                         <div class="nav_logo"> 
                            <img src="images/xenia_logo.jpg" />
                            <h2>Xenia Galaktionova</h2>
-                           <h3>Web developer</h3>
+                           <h3>JS developer</h3>
                         </div>
                         
                         <ul class="menu">
@@ -34,7 +35,7 @@
                             <ul class="social">
                                <li><a href="https://github.com/xenia19"><i class="fa fa-github"></i></a></li>
                                 <li> <a href="https://www.linkedin.com/in/ksenia-galaktionova-a60b30b0/"><i class="fa fa-linkedin"></i></a> </li> 
-                                <li> <a href="https://www.instagram.com/xeniafeliz/"><i class="fa fa-instagram"></i></a> </li> 
+                                <li> <a href="https://play.google.com/store/apps/developer?id=LaSiberia"><i class='fab fa-google-play'></i></a> </li> 
                             </ul>
                         </div>
                 
@@ -67,7 +68,7 @@
                       </li>  
                       <li class="contact_body"> 
                             <h2>Address:</h2>
-                            <p>Russia, Tyumen</p>  
+                            <p>Palermo, Sicily</p>  
                         </li> 
 
                         <li class="contact_body"> 
