--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                             <ul class="social">
                                <li><a href="https://github.com/xenia19"><i class="fa fa-github"></i></a></li>
                                 <li> <a href="https://www.linkedin.com/in/ksenia-galaktionova-a60b30b0/"><i class="fa fa-linkedin"></i></a> </li> 
-                                <li> <a href="https://play.google.com/store/apps/developer?id=LaSiberia"><i class='fab fa-google-play'></i></a> </li> 
+                                <li> <a href="https://play.google.com/store/apps/dev?id=7665033736936736801"><i class='fab fa-google-play'></i></a> </li> 
                             </ul>
                         </div>
                 
