--- a/about_me.html
+++ b/about_me.html
@@ -63,7 +63,7 @@
                           <div class="text_about_me">
                             <p>Hi! My name is Xenia and I am a happy girl from Siberia, living in Sicily. 
                                 I have been creating websites for many years. 
-                            Then my hobby became a profession. I really love what I'm doing. I have experience with JS, React, React Native. I've developed 5 apps that you can find in my  
+                            Then my hobby became a profession. I really love what I'm doing. I have experience with JS, React, React Native. I created many websites and developed 5 mobile apps that you can find in my  
 				    <a href="https://xenia19.github.io/portfolio/portfolio.html" style="text-decoration:none; font-weight:bold;">portfolio</a>
                                      and 1 telegram bot.
                              </p>
